--- a/src/bp-templates/bp-nouveau/icons/bb-icons.css
+++ b/src/bp-templates/bp-nouveau/icons/bb-icons.css
@@ -1,14 +1,14 @@
  /* stylelint-disable */
 @font-face {
-	font-family: "bb-icons";
-	src: url("../icons/bb-icons.eot?80309866");
-	src: url("../icons/bb-icons.eot?80309866#iefix") format("embedded-opentype"),
-	url("../icons/bb-icons.woff2?80309866") format("woff2"),
-	url("../icons/bb-icons.woff?80309866") format("woff"),
-	url("../icons/bb-icons.ttf?80309866") format("truetype"),
-	url("../icons/bb-icons.svg?80309866#bb-icons") format("svg");
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'bb-icons';
+  src: url('../icons/bb-icons.eot?80309866');
+  src: url('../icons/bb-icons.eot?80309866#iefix') format('embedded-opentype'),
+       url('../icons/bb-icons.woff2?80309866') format('woff2'),
+       url('../icons/bb-icons.woff?80309866') format('woff'),
+       url('../icons/bb-icons.ttf?80309866') format('truetype'),
+       url('../icons/bb-icons.svg?80309866#bb-icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="bb-icon-"],
@@ -22,6 +22,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+ 
 .bb-icon-alert-question:before { content: '\e800'; }
 .bb-icon-ball-soccer:before { content: '\e801'; }
 .bb-icon-bell-small:before { content: '\e802'; }
@@ -446,4 +447,4 @@
 .bb-icon-rounded-dribbble:before { content: '\ede2'; }
 .bb-icon-rounded-pinterest:before { content: '\ede3'; }
 .bb-icon-attach:before { content: '\e980'; }
-/* stylelint-enable */
+ /* stylelint-enable */
