#266 - Replaced dashicons with bb-icons

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_lists.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_lists.scss
@@ -229,6 +229,11 @@
 #notifications-user-list {
 	clear: both;
 	padding-top: $pad-med;
+
+	.bb-sort-by-date .notifications-order-actions a .bb-icon {
+		width: 20px;
+		text-align: center;
+	}
 }
 
 // If logged out we don't display action buttons
