--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -622,13 +622,12 @@ div[class*="attached-gif-container"] {
 		top: 50%;
 		margin-top: -40px;
 
-		span.dashicons {
+		.bb-icon-play-thin {
 			font-size: 80px;
 			width: 80px;
 			height: 80px;
 			margin: 0;
 			padding: 0;
-			line-height: 0;
 		}
 	}
 
