--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -993,6 +993,11 @@ a.layout-grid-view {
   padding-top: 1em;
 }
 
+#notifications-user-list .bb-sort-by-date .notifications-order-actions a .bb-icon {
+  width: 20px;
+  text-align: center;
+}
+
 @media screen and (min-width: 46.8em) {
   body:not(.logged-in) .bp-list .item {
     margin-left: 0;
@@ -1622,13 +1627,12 @@ div[class*="attached-gif-container"] .gif-play-button {
   margin-top: -40px;
 }
 
-div[class*="attached-gif-container"] .gif-play-button span.dashicons {
+div[class*="attached-gif-container"] .gif-play-button .bb-icon-play-thin {
   font-size: 80px;
   width: 80px;
   height: 80px;
   margin: 0;
   padding: 0;
-  line-height: 0;
 }
 
 div[class*="attached-gif-container"] .gif-icon {
