grunt files fixed

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1773,3 +1773,5 @@ body .section-repair_community .settings fieldset .checkbox label code {
     height: 28px;
   }
 }
+
+/*# sourceMappingURL=common.css.map */
