--- a/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
+++ b/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
@@ -220,3 +220,65 @@
 		}
 	}
 }
+
+#zmmtg-root {
+	z-index: 999;
+	.chat-container {
+		.dropdown-menu {
+			list-style: none;
+			padding-left: 0;
+		}
+		.chat-scrollbar {
+			max-height: 400px;
+		}
+	}
+}
+body:not(.full-screen) {
+	overflow: auto;
+
+	#zmmtg-root {
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding-bottom: 56.25%;
+		display: none;
+		z-index: 9999;
+
+		&.active {
+			display: block;
+			margin-bottom: 30px;
+		}
+		.meeting-app, .meeting-client, .meeting-client-inner, .meeting-client-inner > div, #dialog-join {
+			position: absolute !important;
+			min-width: 100% !important;
+			width: 100% !important;
+			min-height: 100% !important;
+			height: 100% !important;
+			left: 0 !important;
+			top: 0 !important;
+		}
+		.meeting-app {
+			overflow: hidden;
+			& > span {
+				max-width: 100%;
+			}
+		}
+		.active-main {
+			width: 100% !important;
+			height: 100% !important;
+			position: relative !important;
+		}
+		#sv-active-video {
+			transform: translate(-50%, -50%);
+			position: absolute !important;
+			left: 50% !important;
+			top: 25% !important;
+		}
+	}
+}
+
+body.full-screen.ReactModal__Body--open {
+	overflow: hidden !important;
+	width: 100% !important;
+	height: 100% !important;
+}
