--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13195,6 +13195,24 @@ span.icons:before {
   }
 }
 
+.bb-meeting-actions-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+.bb-meeting-actions-wrap h2 {
+  margin: 0;
+}
+
+.bb-add-meeting {
+  display: inline-block;
+}
+
 #zmmtg-root {
   z-index: 999;
 }
