--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13025,7 +13025,7 @@ span.icons:before {
 }
 
 .meeting-item-table {
-  min-width: 600px;
+  min-width: 520px;
 }
 
 .meeting-item-table .meeting-item-header {
@@ -13174,6 +13174,11 @@ span.icons:before {
   display: inline-block;
 }
 
+#buddypress.bp-vertical-navs .meeting-item-container .meeting-item-table .meeting-item-col.meeting-action .button {
+  font-size: 12px;
+  padding: 7px 10px;
+}
+
 @media screen and (max-width: 768px) {
   .single-meeting-item-table .single-meeting-item .meeting-item-col {
     width: 100%;
@@ -13193,4 +13198,90 @@ span.icons:before {
   .single-meeting-item-table .single-meeting-item .meeting-item-head:empty {
     display: none;
   }
+}
+
+.bb-meeting-actions-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+.bb-meeting-actions-wrap h2 {
+  margin: 0;
+}
+
+.bb-add-meeting {
+  display: inline-block;
+}
+
+#zmmtg-root {
+  z-index: 999;
+}
+
+#zmmtg-root .chat-container .dropdown-menu {
+  list-style: none;
+  padding-right: 0;
+}
+
+#zmmtg-root .chat-container .chat-scrollbar {
+  max-height: 400px;
+}
+
+body:not(.full-screen) {
+  overflow: auto;
+}
+
+body:not(.full-screen) #zmmtg-root {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  display: none;
+  z-index: 9999;
+}
+
+body:not(.full-screen) #zmmtg-root.active {
+  display: block;
+  margin-bottom: 30px;
+}
+
+body:not(.full-screen) #zmmtg-root .meeting-app, body:not(.full-screen) #zmmtg-root .meeting-client, body:not(.full-screen) #zmmtg-root .meeting-client-inner, body:not(.full-screen) #zmmtg-root .meeting-client-inner > div, body:not(.full-screen) #zmmtg-root #dialog-join {
+  position: absolute !important;
+  min-width: 100% !important;
+  width: 100% !important;
+  min-height: 100% !important;
+  height: 100% !important;
+  right: 0 !important;
+  top: 0 !important;
+}
+
+body:not(.full-screen) #zmmtg-root .meeting-app {
+  overflow: hidden;
+}
+
+body:not(.full-screen) #zmmtg-root .meeting-app > span {
+  max-width: 100%;
+}
+
+body:not(.full-screen) #zmmtg-root .active-main {
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
+}
+
+body:not(.full-screen) #zmmtg-root #sv-active-video {
+  transform: translate(50%, -50%);
+  position: absolute !important;
+  right: 50% !important;
+  top: 25% !important;
+}
+
+body.full-screen.ReactModal__Body--open {
+  overflow: hidden !important;
+  width: 100% !important;
+  height: 100% !important;
 }
