--- a/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
+++ b/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
@@ -190,7 +190,7 @@
 
 #buddypress.bp-vertical-navs .meeting-item-container .meeting-item-table .meeting-item-col.meeting-action .button {
 	font-size: 12px;
-    padding: 7px 10px;
+	padding: 7px 10px;
 }
 
 @media screen and ( max-width: 768px ) {
@@ -245,63 +245,53 @@
 }
 
 #zmmtg-root {
+	display: none;
+}
+
+#zmmtg-root.active {
 	z-index: 999;
+	position: fixed !important;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	display: block;
+
+	.meeting-client-inner {
+
+		.admin-bar & {
+			top: 34px;
+			height: auto;
+			bottom: 0;
+		}
+	}
+
 	.chat-container {
+
 		.dropdown-menu {
 			list-style: none;
 			padding-left: 0;
 		}
+
 		.chat-scrollbar {
 			max-height: 400px;
 		}
 	}
-}
-body:not(.full-screen) {
-	overflow: auto;
 
-	#zmmtg-root {
-		position: relative;
-		width: 100%;
-		height: 0;
-		padding-bottom: 56.25%;
-		display: none;
-		z-index: 9999;
+	#wc-footer {
+		bottom: 140px;
+	}
 
-		&.active {
+	#wc-footer .open .dropdown-menu {
+		bottom: 55px;
+		z-index: 9;
+		position: absolute;
+		width: 230px;
+		list-style: none;
+		margin: 0;
+
+		li a {
 			display: block;
-			margin-bottom: 30px;
-		}
-		.meeting-app, .meeting-client, .meeting-client-inner, .meeting-client-inner > div, #dialog-join {
-			position: absolute !important;
-			min-width: 100% !important;
-			width: 100% !important;
-			min-height: 100% !important;
-			height: 100% !important;
-			left: 0 !important;
-			top: 0 !important;
-		}
-		.meeting-app {
-			overflow: hidden;
-			& > span {
-				max-width: 100%;
-			}
-		}
-		.active-main {
-			width: 100% !important;
-			height: 100% !important;
-			position: relative !important;
-		}
-		#sv-active-video {
-			transform: translate(-50%, -50%);
-			position: absolute !important;
-			left: 50% !important;
-			top: 25% !important;
 		}
 	}
-}
-
-body.full-screen.ReactModal__Body--open {
-	overflow: hidden !important;
-	width: 100% !important;
-	height: 100% !important;
 }
