--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13219,69 +13219,46 @@ span.icons:before {
 }
 
 #zmmtg-root {
-  z-index: 999;
+  display: none;
 }
 
-#zmmtg-root .chat-container .dropdown-menu {
+#zmmtg-root.active {
+  z-index: 999;
+  position: fixed !important;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+}
+
+.admin-bar #zmmtg-root.active .meeting-client-inner {
+  top: 34px;
+  height: auto;
+  bottom: 0;
+}
+
+#zmmtg-root.active .chat-container .dropdown-menu {
   list-style: none;
   padding-left: 0;
 }
 
-#zmmtg-root .chat-container .chat-scrollbar {
+#zmmtg-root.active .chat-container .chat-scrollbar {
   max-height: 400px;
 }
 
-body:not(.full-screen) {
-  overflow: auto;
+#zmmtg-root.active #wc-footer {
+  bottom: 140px;
 }
 
-body:not(.full-screen) #zmmtg-root {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-  display: none;
-  z-index: 9999;
+#zmmtg-root.active #wc-footer .open .dropdown-menu {
+  bottom: 55px;
+  z-index: 9;
+  position: absolute;
+  width: 230px;
+  list-style: none;
+  margin: 0;
 }
 
-body:not(.full-screen) #zmmtg-root.active {
+#zmmtg-root.active #wc-footer .open .dropdown-menu li a {
   display: block;
-  margin-bottom: 30px;
-}
-
-body:not(.full-screen) #zmmtg-root .meeting-app, body:not(.full-screen) #zmmtg-root .meeting-client, body:not(.full-screen) #zmmtg-root .meeting-client-inner, body:not(.full-screen) #zmmtg-root .meeting-client-inner > div, body:not(.full-screen) #zmmtg-root #dialog-join {
-  position: absolute !important;
-  min-width: 100% !important;
-  width: 100% !important;
-  min-height: 100% !important;
-  height: 100% !important;
-  left: 0 !important;
-  top: 0 !important;
-}
-
-body:not(.full-screen) #zmmtg-root .meeting-app {
-  overflow: hidden;
-}
-
-body:not(.full-screen) #zmmtg-root .meeting-app > span {
-  max-width: 100%;
-}
-
-body:not(.full-screen) #zmmtg-root .active-main {
-  width: 100% !important;
-  height: 100% !important;
-  position: relative !important;
-}
-
-body:not(.full-screen) #zmmtg-root #sv-active-video {
-  transform: translate(-50%, -50%);
-  position: absolute !important;
-  left: 50% !important;
-  top: 25% !important;
-}
-
-body.full-screen.ReactModal__Body--open {
-  overflow: hidden !important;
-  width: 100% !important;
-  height: 100% !important;
 }
