--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1177,13 +1177,9 @@ div .bbp-reply-form #whats-new-toolbar .medium-editor-toolbar.active, div
   color: #4d5c6d;
 }
 
-.activity-update-form #whats-new-content {
-  position: relative;
-}
-
 .activity-update-form #whats-new-content .medium-editor-toolbar {
   top: inherit;
-  bottom: -52px;
+  bottom: 56px;
   left: 38px;
   visibility: hidden;
   z-index: 99;
@@ -1204,7 +1200,7 @@ div .bbp-reply-form #whats-new-toolbar .medium-editor-toolbar.active, div
 }
 
 div .activity-update-form #whats-new-content .medium-editor-toolbar.active {
-  bottom: -51px;
+  bottom: 56px;
 }
 
 .activity-update-form #whats-new-content .medium-editor-toolbar .medium-editor-toolbar-actions {
@@ -1779,6 +1775,15 @@ input.search-query-input {
   .bbp-topic-form #whats-new-toolbar .medium-editor-toolbar-form .medium-editor-toolbar-input {
     max-width: calc(100% - 90px);
     width: auto;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  #buddypress > .activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
+    bottom: 109px;
+  }
+  div #buddypress > .activity-update-form .focus-in #whats-new-content .medium-editor-toolbar.active {
+    bottom: 109px;
   }
 }
 
