--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12908,9 +12908,9 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 @media screen and (max-width: 540px) {
   #media-stream .document-data-table-head {
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     padding: 10px 0;
   }
   #media-stream .document-data-table-head .data-head-sort-label {
@@ -12921,9 +12921,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   }
   #media-stream .document-data-table-head .data-head-name,
   #media-stream .document-data-table-head .data-head-modified,
+  #media-stream .document-data-table-head .data-head-origin,
   #media-stream .document-data-table-head .data-head-visibility {
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
+    -ms-flex-preferred-size: auto !important;
+    flex-basis: auto !important;
+    width: auto !important;
     padding-right: 15px;
   }
   #media-stream .document-data-table-head .data-head-visibility {
@@ -13139,10 +13141,21 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   margin: 5px 0;
 }
 
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap .error-box {
+  display: none;
+}
+
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit {
   height: 32px;
   width: 100%;
   margin: 0 8px 0 0;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit.error + .error-box {
+  display: block;
+  line-height: 1.3;
+  margin-top: 5px;
+  color: #f00;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
@@ -13293,10 +13306,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   #media-folder-document-data-table .media-folder_items .media-folder_icon img {
     width: 100%;
   }
-  #media-folder-document-data-table .media-folder_items .media-folder_details {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-    width: 100%;
+  #media-folder-document-data-table .media-folder_items .media-folder_details,
+  #media-folder-document-data-table .media-folder_items .media-folder_group {
+    -ms-flex-preferred-size: 100% !important;
+    flex-basis: 100% !important;
+    width: 100% !important;
   }
   #media-folder-document-data-table .media-folder_items .media-folder_modified {
     margin-bottom: 5px;
@@ -13313,6 +13327,28 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
     left: inherit;
     right: 9px;
   }
+}
+
+#media-stream.document-parent .document-data-table-head .data-head-name {
+  -ms-flex-preferred-size: calc(40% - 50px);
+  flex-basis: calc(40% - 50px);
+}
+
+#media-stream.document-parent .document-data-table-head .data-head-origin {
+  -ms-flex-preferred-size: 20%;
+  flex-basis: 20%;
+}
+
+#media-stream.document-parent #media-folder-document-data-table .media-folder_items .media-folder_details {
+  -ms-flex-preferred-size: calc(40% - 100px);
+  flex-basis: calc(40% - 100px);
+  width: calc(40% - 100px);
+}
+
+#media-stream.document-parent #media-folder-document-data-table .media-folder_items .media-folder_group {
+  -ms-flex-preferred-size: 20%;
+  flex-basis: 20%;
+  width: 20%;
 }
 
 .bp-media-header-wrap h2 {
