fix for media, document and gif used one at a time

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -553,6 +553,16 @@
 			color: #122b46;
 		}
 	}
+
+	.toolbar-button.disable,
+	.toolbar-button.disable.active {
+		pointer-events: none;
+		opacity: 0.4;
+
+		.bb-icon {
+			color: rgba(18, 43, 70, 0.4);
+		}
+	}
 }
 
 .bb-groups-messages-right-bottom #whats-new-toolbar .bb-icon-attach:before {
