--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2669,8 +2669,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		.location-folder-title {
 			padding: 8px 0;
 			display: inline-block;
-			margin-left: 8px;
 			vertical-align: middle;
+			font-size: 12px;
 		}
 
 		.location-folder-back {
@@ -2681,11 +2681,12 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			i {
 				display: inline-block;
 				vertical-align: middle;
-				font-size: 34px;
-				height: 25px;
-				line-height: 25px;
-				width: 20px;
+				font-size: 22px;
+				height: 26px;
+				line-height: 26px;
+				width: 15px;
 				user-select: none;
+				color: #939597;
 			}
 		}
 
