consistent folder icons

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2727,7 +2727,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 					font-size: 14px;
 
 					&:before {
-						content: "\e8ec";
+						content: "\e959";
 						font-family: bb-icons;/* stylelint-disable-line */
 						color: #939597;
 						margin-right: 12px;
