--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13953,7 +13953,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:before {
-  content: "\e8ec";
+  content: "\e959";
   font-family: bb-icons;
   /* stylelint-disable-line */
   color: #939597;
