color for more action dots

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1882,6 +1882,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 			i {
 				font-size: 21px;
+				color: #939597;
 			}
 
 		}
