--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13216,6 +13216,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__anchor i {
   font-size: 21px;
+  color: #939597;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list {
