--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2926,6 +2926,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	background-color: #fff;
 	border-radius: 4px;
 	border: 1px solid #e7e9ec;
+	margin-top: 20px;
 
 	.document-data-table-head {
 		padding: 20px 20px 8px;
