--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -14136,6 +14136,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #e7e9ec;
+  margin-top: 20px;
 }
 
 #media-stream.document-parent .document-data-table-head {
