--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1704,6 +1704,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			right: 0;
 			text-align: center;
 			border-bottom: 1px solid #ecedee;
+			font-size: 16px;
+			font-weight: 500;
 		}
 
 	}
