#266 - Create Popup in popup UI issue fixed

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2646,6 +2646,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	}
 }
 
+.popup-on-fly-create-folder .bb-field-wrap .bb-dropdown-wrap select{
+	width: 100%;
+}
+
 .db-modal-buttons {
 	text-align: right;
 	margin-top: 20px;
